--- a/SerialportDemo/winforms/developers/DevelopersReadSettings.resx
+++ b/SerialportDemo/winforms/developers/DevelopersReadSettings.resx
@@ -145,76 +145,77 @@
   <data name="ToolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAfCAYAAAD5h919AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAL3SURBVEhLvVZJixNBFE5UjDvqgHpQXMCT6EHxpLjrQVwG
-        ISh6CMwhk6quqk4mRvBiDh5U3Bdww6uig+KIGyrDMCiigjIH8ehJf4ff113BSayeVKbH+eDNdL969b56
-        W3Uyk4ogKK+XUp+TSt/0kSDQ16U0O+12P2itc0FgHlsHAQR/kkUqo2D/EYa/lQoPWzftUa1WZ+N0L4Mg
-        3GZVbQGyGzjYAPYNg7Rg1WOjQdRJKuD8FqILhDAbSSaVMvl8fqpddiMFkeazMGYD3odAVqvX61MiAxfS
-        EhGIbJ1Q+o0lm2bVzZgIIkLK8hqQvYb+VKFQmGHVf+EiQifOE6K8qlWo5zpOfps1ioxHoTcMVwTKPMXa
-        Gfq16hguIqH1Hpy6H531qCF8p57reD4NucdO5b6GRO9a96D1f6IzzzbVLCGiXBiG81uFeq4bY1aTKEqV
-        Mq+aRb2AfMP6UKVSmRk5JMZTI4LtXCwWZ9HZaEEU0+FrL0knhGgs0JcXkVJqE0K/itpc8RdzjdcTtme9
-        idg9uGQPorgHfIX2PCD3exOlhTeRlOGWeFY4mL6i70D6sN0/dZiDtbwosdH5qXCLCYVSh7jfmygtMNjb
-        /ydRFoO8WIi+ZbgdjnGY2xL5tndsY+q8NTioSN0DocwX+PqOtcGmy9XdDHI5wt8P433JErc07z8hxALU
-        tYtR4PPejfUjuIbeUccDRE4TiObgXlvqkig1Ui6xpmycLji+j2iewMcnNpL98n5FnXiTX4gic6cu7Ibx
-        e+iGW4V6OO5nPWgbfxrUZ6R7B59xmBwd8xm6XUwnD+4k6qnV5tLQJdi8kpE1vqTUgWgEJz/O9qbTUqm0
-        iL+QMCEn4kgTiDoBI0OKHiLKD4j2Bz+Q8LW5V5lfjB7NcTkxdR0iy3Sxbpwd+gHpUfx/i/Ze+E8zoIu8
-        f9e5QDKc/i5Intk6DjbNEV+gfI4cn+REs4DjEfjYzRqhNnnM1nnM2QDJLU0MzgKILrEV00hMEMlF+Nxq
-        3U8mMpk/uKDhWY4Pm58AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAL4SURBVEhLvVZJj0xRGO1GtKGJIcGCGBIrYUGsiJmF0ERS
+        ISwq6UWpe+9376vqUhIbtbBAtFliii1BCGIK0hEhgoT0Qiyt+B3Oea+q41W/V31fVac7OV1vuPc733C+
+        776uron8M6a0Vmt7Vou97gNj7FWt3fZMPlpre4xxj0gAAwbAv3RocYL1n7Hwr0hw0JusUqnMhHcvjQm2
+        +G4C2TU49hT7PoA077WvQZQlFTB+g9Er5daTTIu4XC43uSVhB0SWhpVz60D8HmTVWq02KZWsU6KQTLk1
+        SuybOtmURLLxIKJhrUurQPYaKT2Zz+enjSJLIoISZytVWtEMPg+NitxkjZqNHQ2CZUbcE7w7Tbux90lE
+        ytpdyPtDKOtBA7znc27G9SngDpVKETUQ3lvbD+n/hjLPxGqWElFPEARzmsGeI5FzbiWJwlSJexWHvDAi
+        PyiQcrk8fSSqdmrEzZRzoVCYQWP/A1FMRYS7ST4uRK16hqn0IhKRDQj9MupzyR/uCscTHOj2JqJ6MGT3
+        obh9vuB6OhhJ3TMir9nVYpE3kdbBpqhXONN8YW+hfwYypQ59sJqDcqwjI/7eBUrkwISmDo291Ut1bdao
+        G428UKmBJZgOR9jMY/aRr7yjFnA1ThA2KlJ3T4n7BjH8xLuh2HBNmgxa66UIfy8W70lH0EdJc/4ppeai
+        rvMZBY73/dhzCGPoHZ/RgTBDKUS9mGuLkxCmRutFjfTSGAzfRTSPEckXCql+8n6vT/LBMLIkInqFxR/D
+        Y7oJfM5JznqQLDoa5CvSvY3XHLw0zGs828F0wrHeRKL+anUWFyYBm5czUqQkPEnrRMOQ+jHKm0aLxeIC
+        fiGhQ45HkaYQZVEdI0OK7iPKT4j2Fw9LZGFjQdwfRg9xXExNXRYiTgKmi3Vj74Tjx7jD+H0Lec8bJYYs
+        33VJjpAM3t8GybN6HYdifcQbvHyOHJ9gR7OA7QA2drJGqE0OvXWOH5iNE3nEsegbwV4ABjtBRBDiPGxu
+        zliC8Vn+D7aD4VildebuAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="ToolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAfBSURBVFhHvZf7U9PZGcb9odN/o53+0Nnp9uJOZ3/ubtcL
-        uIpXREQQEpKQhCTkHhLIhcSEhEuAEC6BAEHusMoiUOS2oIDgagUlUWjxMlgRV4RtkVWrPj3ngFbNznRa
-        mJ6Zz3wzDDnP877vOQ9fti0vL4OysrKC77///0C13ui+NTB//wGCt/6K4M0Nbt3+35n5APbzObZviDyp
-        1lsD1M29+b8h29MMvasRmfmtMLvqUWhwoVhnW0dLsRKy4NFsoLb8G5V5AxM8yjcY4VFQMpGvtiLdWg2V
-        vQ7yrABsBY1Mk2pvoy2Zmp6BNrsB3o4ZmALfoqC8D1ei9+DWzu24uesT3NxJIZ93bEdox+/W+eK36/zx
-        Nxv8GqHP3/AxQp99jOBnv0LoDx9hYu/ncLi7kV55FdbAFUhMNUyTaq8buHEL+pwWmKon8GmUGLyUbFz6
-        /S8R/NlPMP3zn24KusfI9l9AZWwDJ28c2vLLkFlqMXnjPQMz0LmaYK2/jmhdPTT5PZhracFKawDLm4Tu
-        8ZfGRmgLhpDkGoG6ZBxScyDcgNbZiFPNM5D6grA2z+LR3/+JrVqLK8+h811BouMClMVjbARhBjTZjbA1
-        hiAunYKl4SYerTzDq5cv8eLFi03x6tVLPHyyBm3ZZSScGoK8aBSpxh8xoHY0IKs+CJH3Gsx1ISwuP8Pa
-        06d48uTJplhbe4qFpafQkNbHWwchK7gIcWZ1uAGVvQHm0zcg9FyFqXaaGaDr9evXm4Kuh8SAynsJcZZ+
-        SPKGIcqoCjegPFUPY+A6BIVX2HNx+Qf25R/b9L+BLtoBpWcUx029EOd8gxSDP9yAwlaHjOpJ8N0T5DlF
-        5vbD1o3g8SoUhRdxLLMHQucABHo/03zPgNx6GvrKPyOZ3FWD/xoWiYGtOoTUQJp7GDGGbggcfeCnV4Yb
-        SMuqZVeFmzNGjFxlBrZqUQOy/CFEp3eCZzsPnq4i3ABNJw25KknOEWaEXp3nz59hdXV1U9A9Hny3Cmnu
-        II5oO8DN6kayxveBAZLLMpJONKVoWNA7+3BpKw38AxJXPw6p25Fk7gRXXR5uQGKuYSlFw0JTOk5GsLbR
-        wM0vOoJUZx8OKs/gZGYHOKqycAM0neSFIywsaFpN315iY6BXaIF0g/H4XZ7iwbt89yGrDCo+NbsIge1P
-        OCBvQ7yhHYnK0nADNJ1k7gs4kdWPRNsASyxF0QjScrohIzckzRp4D1lWDaSW6nXMlCqS8RQ/KcYPsbEK
-        IusZiBznwbd244jqK+xPa0VcOumCvCTcAE0nSd4Q4sy9iDOdR6zxPGLSycwkFthOZcPpyoPZYoXRZIEl
-        y4q8/EJ4S8tRWl6BMl8lSssqUFxShiKPF+4CD+wOF+KFRkRJ6hEla8F+QpS0GbGaNiSkecMNCEk6iXMG
-        iXDPOiQ0jqqboNZb0dl5Dv6qKnBF6TiRYkZCigEFhcUYH7+EiYlxjI6OYnh4GAP9/ejp6UHnuXNobW2B
-        TEUMiPxMOErShH2pjYhRtSBeVsw03zOQQtJJ6OzHsYxuBg2NaGU90o129Pf1wUuq25dkRwQ/gIgkD/Qm
-        B4aGvsHg4CB6e3vR1dWF9vZ2tLW1oZH8/Q/U1ECiMGBfSgUT3ituwJeiekTLm3BC6gk3ICDpJLD3Ikbf
-        yThKQuOwvA4GsxMXL16Ar4JUwnEiQlCHSG4JtAYburu7SHc6cfbsWbSQF5iGhgYEAgH4/X6UlHghlGiw
-        l1/OhPcI67An5TQOyRpwXFIUboBP0oln6yFvRB0MGhqHZLXIyHJhjLS4nMw5ipONyA0DSp2ZtLkVzc3N
-        qKurQw2puKKiggiXoKioCLk5OeAJFdjDK0MkEY4U1LLuHUg9jVhxYbgBntbHUuqIpp1xmITGQWkNa/XA
-        QD885HC9ayBNlUGqrUEVORs+nw9erxcFBQXIzc2Fw+GAxWJGEk/KfpcK7+bVYHdyNfaLAjgmKgg3wNWU
-        I8nUiUOqMwwaGgdSq6Ehh7Cj42vk5rnJGch+OwKxTMeqLS4uhtvthsvlgt1uJ8IWZGZmQqvVID5JhAiO
-        lwnv4lZhJ8ePvSnViBG63zFA3s0nr99CorwYHBNpu/IrFhgUeoIVGhOayKFyEoHDJ7XMRFSCCWKpEnmk
-        WqfTCZvNBrPZDIPBAI1GA4VCAalEguMJAuxO9DDhHUmV2JFYQUbiR7Qgn2kyA4uLiwiGbsJwyodYWTlO
-        ZnyNGM0ZHCUckZFwIq32+ytZpZlGE7S6dKg1WhiNRlitJBfIU6/XQ61WQy6XQyqVIjU1FSKRELEJfOzh
-        FCOCV40Irh+7OZX4kleJg1wXLk1cI+8LS9h29+5dTE1Noau7B2JNLg7y3YhOLcMRcSkO8/PA4UuQQSrT
-        6w3Q6XRMSKFQQiZLY0JCoQh8vgDJycngcrngcN7AQczxJETG2bDrRA52xbmwk/BFbDaO8uwYvfQtFhYW
-        sO3evXvMwPDQEJqa25DlIHfcnM8wWPJYCjoc2STZ3uBYx/6fod81mPOQblrfz2grgj3Xh8bWcwgGQ+sG
-        Hj16hNu3b2NychJjY6MsXOip7+/v24B+3gzr+wwMDOACScvLlycQCgUxPz+PpSUyAvof6uPHj3H//n3M
-        zc1hZmaGuAtienp6SwmFQpidncWdO3dY5VR8eXkZ/wIqvncFH1tz3AAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAfISURBVFhHvZfrU9PZHcZ90em/0U5fdDrdXux0+rq7XS/o
+        Kl4REUFISEISkpB7SCAXEhISLgFCuAQCRLnDKotAkduCAoKrFZQEsBV1sCIsCNuCq1Z9es5BdtR0pjOF
+        aWY+8/vxIud5zvd7vk8Ou1ZXV0FZW1vDd9/9f6BaW7q7tl7mHz9BcOZvCE6/Y2aO/P0/Mku+9z5snfts
+        7RB5Uq0fDFA3j+b/jmxPE/SuBmTkt8DsqkOhwYVinW0TLcVKyIRH8w61BZ4tVGZ4GCZ4lFsY4VFQMpCv
+        tiLNWg2VvRbyzABsBQ1Mk2rvomWfnJqFNrse3vZZmALfoKC8FzejDmJm725M7/sdpvdSyPue3Qjt+e0m
+        n/9mkz/9+h2/QuizLT5B6NNPEPz0lwj98RcYP/QZHO4upFXegjVwExJTDdOk2psG7s5An9MMU/U4/hAp
+        Bi85G9d//3MEf/IjTP30x9uCrjG8+2dQGVvByRuDtvwGZJbzmLj7gYFZ6FyNsNbdQZSuDpr8btxvbsZa
+        SwCr24Su8deGBmgLBpHoGoa6ZAxScyDcgNbZgKymWUh9QVib7mHpH//CTn0W115C57uJBMdVKItHWQvC
+        KqDJboCtIQRx6SQs9dNYWnuBN69f49WrV9vizZvXePrsObRlNxCfNQh50QhSjP/BgNpRj8y6IETe2zDX
+        hrC4+gLPNzbw7NmzbfH8+QYWVjagIaWPsw5AVnAN4ozq8Aqo7PUwX7gLoecWTOenmAH6efv27bagazwl
+        BlTe64i19EGSNwRRelW4AWVWHYyBOxAU3mTPxdXvd8wArYDSM4Izph6Ic75GssEfbkBhq0V69QT47nHy
+        nCR9+37nWrC8DkXhNZzO6IbQ2Q+B3k9G/6MxlFsvQF/5FySRWTX4b2ORGNipQ7hADKS6hxBt6ILA0Qt+
+        WmW4gdTM82xUuDmjxMgtZmCnPtSALH8QUWkd4NmugKerCDdA00lDRiXROcyM0NF5+fIF1tfXtwVd48m3
+        65DmDuCkth3czC4kaXwfGSC5LCPpRFOKhgWd2acrO2ngn5C4+nBc3YZEcwe46vJwAxJzDUspGhaa0jHS
+        guc71QHQFqQ4e3FMeRHnMtrBUZWFG6DpJC8cZmFB02pqboW1gY7QAqkGY/l9NvBk+T2+Je8fsM5KT8Un
+        7y1CYPszjspbEWdoQ4KyNNwATSeZ+yrOZvYhwdbPEktRNIzUnC7IyISkWgMfIMusgdRSvYmZUkUynuIn
+        UeuH2FgFkfUiRI4r4Fu7cFL1JY6ktiA2jVRBXhJugKaTJG8QseYexJquIMZ4BdFppGcSC2xZ2XC68mC2
+        WGE0WWDJtCIvvxDe0nKUllegzFeJ0rIKFJeUocjjhbvAA7vDhTihEZGSOkTKmnGEECltQoymFfGp3nAD
+        QpJO4pwBIty9CQmNU+pGqPVWdHRchr+qClxRGs4mmxGfbEBBYTHGxq5jfHwMIyMjGBoaQn9fH7q7u9Fx
+        +TJaWpohUxEDIj8TjpQ04nBKA6JVzYiTFX90ISFTkEzSSejsw+n0LgYNjShlHdKMdvT19sJLdnc40Y4I
+        fgARiR7oTQ4MDn6NgYEB9PT0oLOzE21tbWhtbUUD+f0P1NRAojDgcHIFEz4krscXojpEyRtxVuoJNyAg
+        6SSw9yBa38E4RULjhLwWBrMT165dha+C7ITjRISgFge4JdAabOjq6iTV6cClS5fQTC4w9fX1CAQC8Pv9
+        KCnxQijR4BC/nAkfFNbiYPIFHJfV44ykKNwAn6QTz9ZNbkTtDBoax2XnkZ7pwigpcTnpcyQnGwfeGVDq
+        zKTMLWhqakJtbS1qyI4rKiqIcAmKioqQm5MDnlCBg7wyHCDCBwTnWfWOplxAjLgw3ABP62MpdVLTxjhB
+        QuOYtIaVur+/Dx5yuN43kKpKJ7utQRU5Gz6fD16vFwUFBcjNzYXD4YDFYkYiT8qqRYX382qwP6kaR0QB
+        nBYVhBvgasqRaOrAcdVFBg2NoynV0JBD2N7+FXLz3OQMZP/QArFMx3ZbXFwMt9sNl8sFu91OhC3IyMiA
+        VqtBXKIIERwvE97HrcJejh+HkqsRLXS/Z4DczSfuzCBBXgyOiZRd+SULDAo9wQqNCY3kUDmJwIlzWmYi
+        Mt4EsVSJPLJbp9MJm80Gs9kMg8EAjUYDhUIBqUSCM/EC7E/wMOE9iZXYk1BBWuJHlCCfabJr+eLiIoKh
+        aRiyfIiRleNc+leI1lzEKcJJGQknUmq/v5LtNMNoglaXBrVGC6PRCKuV5AJ56vV6qNVqyOVySKVSpKSk
+        QCQSIiaej4OcYkTwqhHB9WM/pxJf8CpxjOvC9fHb5Kq3gl0PHz7E5OQkOru6Idbk4hjfjaiUMpwUl+IE
+        Pw8cvgTpZGd6vQE6nY4JKRRKyGSpTEgoFIHPFyApKQlcLhcczhYcRJ9JxIFYG/adzcG+WBf2Ej6PycYp
+        nh0j17/BwsICdj169IgZGBocRGNTKzIdZMbN+QyDJY+loMORTZJtCwd5J9j/O/S7BnMe0kyb6xltRbDn
+        +tDQchnBYGjTwNLSEubm5jAxMYHR0REWLvTU9/X1voO+b4fNdfr7+3GVpOWNG+MIhYKYn5/HygppAf0v
+        dXl5GY8fP8b9+/cxOztL3AUxNTW1o4RCIdy7dw8PHjxgO6fiVPvfKr53Bc997N8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ToolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKQSURBVFhH7VZLTxNRFC5NtwoOxj6m05kOlIHR+kiMsaBB
-        Q/qgQIxhQQQlVGtdaGQitI0r15ro33FD1MQaE90Y2egvcEdjnEVxwfF+80ApnaGDrXHRLznJnTvnnO+7
-        95778PXQw38PjuejR0PCedYMmD1tIYCYQUGIWN+Hw7Fg9JQkDdXUhFLn+NhD1uU3/7jCz/GCdjqR2IpL
-        8ddcSByz+r0B5IIgv3+Rn6EPhQJl1LP6QJg/SIS/P8xr8EXMs1yeYqL41rMITLskSrXn03n6ubZGVK3S
-        52KRrrqLMMjhA1/EbLPYp7lpkgQ2Eyyn5XcwsH6jwyP1V0s3icpl0yoVNxF7yZmvHYccyGXVUdsIHGdr
-        fklR9XfLy24i+mBO5IhFDuRCTiT2Av9A2F0EiPtDwiM3cuRALjOld7iKmEyeaTDb7ha5DUcRX0v3DOsm
-        uQ1HETb5Tnm9a+Q2WLEJ2vjJZGOzacrR/nT7Do2ryQZ84GuGdBZ9KDisefO0o/2lVDJqAoUJXzOkc3Dc
-        53+KsHdHGyemJziSf1xZYVboqgg/x9Y0q57TN4t395Cj4FAPsObC7JQIgzyVUPSXNxbp2/0H9EPTaGf9
-        d7Wj4GCtdsffigic4EUtJg/pV1KTNJ+do+uZWSpkZujxVIYmlDF7qxlHsdMWhQjcjNZV3v5RPMgujmA8
-        sTWRvUbZhcKuXUzPUUSWdW7/Pm99TlQrVGPfo8OKt8sIL5lwTH6TvHCZ0vO3KMfIIUaUR+yLpdWU7hPx
-        fXWVnkyliV3tG55fR6FQTA1GpRpEpNKzJvn+kTdjV8TG4pJBLrC3wJFIRLH+ewNEYCbYctRdRt4MP3zx
-        BsDID01uAy8Z1ARr/vtHaQ89dB8+3y90jSBVdyhdDwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKkSURBVFhH7VbPTxNREKabXhVcDN12u93t2u1apKKJMa5E
+        ISH9QYEYw4EISlqt9aCRjdA2njxrov+OF6Im1pjIxchF/wJvNMYeigfGN0u3Crvdvlds4qGbvNvMfN/7
+        3rczMzQ0+AYK/O8K8KIYPilIlwhPPwNXP+aMSlKIIccZeioQnlCUM7WEptd5MfKYRHAUBTlelMzzmrYb
+        VaJveUFOUOS4g0uS+vFVbh4+FQqQTlxojATFbiS44aBoYizmvMjmICLL75lJoOyKrNRezuXg18YGQLUK
+        X4pFmPEmYYFjDMZizh7JfZ6dA0UiSpCa1Erg++mxeP3N6m2AcvngVCpeJA6Dk1g7D2tgrZaPqDn4T5M3
+        n4onGh/W1rxI+EhF36Gb/wWOuVgDazGa2CLKjQS9SSDwsCA9acvuAo41KM3rqo4nievJyeZ0cnLPevM+
+        gNuMOpL4VnoAePoJ3pWEDb5f3gT7zY8reyenErNJpnEu2dw5IjmS+Hz3HhjjySbGoDGp7c4Q6EPD4Zsf
+        lR0JfC2VAD2BxuwHgY7/OWWfYLinM7Qj+HY+D9v5Am2z6okEx5M3zSQuNnaK9x1uRz/g6dKsaAaYew9A
+        cCMWb7y+tQLfHz6Cn6YJ+5t/3I6Gw0PRMZlJ+MdE2YyoamPGmIalzCLcTC9AIT0PT2fTcDV+lkxGq8NZ
+        rdirY+JkbI1y+n1ilAyjsai2O5W5AZnlQvtcSS1CiJDine3VvVlVK1Aj80CP6WzDCDeZYER9l7x8DVJL
+        dyBLSCAZWdXsweImqYPEj/V1eDabAjLat5i3I0GIjAfCSg1JGKmFA/Dug6VNYmtl1QKXyC5wIhTSe/oF
+        kAQqEYhq9dZIpTETh7G4A+DNewa3GeMmg55gnOf/ZintSbZB0kABRgV+A0ZoH/FLC1qwAAAAAElFTkSu
+        QmCC
 </value>
   </data>
 </root>
